// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordVisibilitySwitch /> renders the switch correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/icons/eyeSlash.png",
      }
    }
    style={
      Object {
        "height": 28,
        "tintColor": "#000000",
        "width": 28,
      }
    }
    testID="testing-PasswordVisibilitySwitch-Component"
  />
</View>
`;

exports[`<PasswordVisibilitySwitch /> when the passwordVisible prop is false renders with the correct icon 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/icons/eyeSlash.png",
      }
    }
    style={
      Object {
        "height": 28,
        "tintColor": "#000000",
        "width": 28,
      }
    }
    testID="testing-PasswordVisibilitySwitch-Component"
  />
</View>
`;

exports[`<PasswordVisibilitySwitch /> when the passwordVisible prop is true renders with the correct icon 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/icons/eye.png",
      }
    }
    style={
      Object {
        "height": 28,
        "tintColor": "#000000",
        "width": 28,
      }
    }
    testID="testing-PasswordVisibilitySwitch-Component"
  />
</View>
`;
